+ fix tags repo